--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="full_wraper">
       <div class="container">
         <div class="logo">
-          <a href="#"><img src="/image/logo.jpg" alt="logo" /></a>
+          <a href="#"><img src="logo.jpg" alt="logo" /></a>
         </div>
         <!-- <div class="clr"></div> -->
         <div class="manu">
@@ -27,7 +27,7 @@
     <section class="about_part_main">
       <div class="container">
         <div class="image">
-          <img src="/image/rickshaw.jpg" alt="rickshaw" />
+          <img src="rickshaw.jpg" alt="rickshaw" />
         </div>
         <div class="text">
           <p>
